--- a/src/azure-deploy.yml
+++ b/src/azure-deploy.yml
@@ -1,1 +1,26 @@
+name: Azure Deploy
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy Azure Bicep Template
+      run: |
+        az deployment group create \
+          --resource-group YOUR_RESOURCE_GROUP_NAME \
+          --template-file ./infra/main.bicep
 
